IJPL-214795 [java-completion] Complete method names (basic)
GitOrigin-RevId: 66f7f842aa9532655d85ced792306976690e97a6